# OligoGym

./: .gitignore  COMMUNICATION.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: main.yml
benchmarks/: Analysis.ipynb  config.yaml  config_test.yaml  generate_runs.py  train_model.py
croissant_metadata/: oligogym_croissant.json
data/: example_data.csv  example_data.json
docs/: conf.py  index.rst
docs/tutorials/: data_tutorial.ipynb
notebooks/: data_tutorial.ipynb  metrics_tutorial.ipynb
notebooks/data_reports/: acute_neurotox_lna.ipynb  acute_neurotox_moe.ipynb  asooptimizer.ipynb  cytotox_lna.ipynb  immune_modulation_TLR7_8.ipynb  openASO.ipynb  sherwood.ipynb  siRNA.ipynb  siRNA3.ipynb  siRNA_mod.ipynb
oligogym/: features.py  helm.py  metrics.py  models.py  split.py  stats.py  utils.py
oligogym/data/: __init__.py  data.py  dataset_downloader.py
oligogym/resources/pkg_dataset/: Alharbi_2020_1_processed.json  Alharbi_2020_2_processed.json  Hagedorn_2022_1_processed.json  Hwang_2024_1_processed.json  Ichihara_2007_1_processed.json  Ichihara_2007_2_processed.json  Knott_2014_1_processed.json  MOE_Neurotox_1_processed.json  Martinelli_2023_1_processed.json  McQuisten_2007_1_processed.json  Papargyri_2020_1_processed.json  Shmushkovich_2018_1_processed.json
tests/: test_featurizer_kmer.py  test_featurizer_ohe.py
